; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_devinst.c_testSetupDiGetClassDevsA.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_devinst.c_testSetupDiGetClassDevsA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_11__ = type { i32, i32 }

@testSetupDiGetClassDevsA.displayguid = internal global %struct.TYPE_10__ { i32 1295444328, i32 58149, i32 4558, %struct.TYPE_8__ { i32 191, i32 193, i32 8, i32 0, i32 43, i32 225, i32 3, i32 24 } }, align 4
@.str = private unnamed_addr constant [33 x i8] c"EnumDisplayDevices failed: %08x\0A\00", align 1
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [35 x i8] c"SetupDiGetClassDevsA failed: %08x\0A\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"SetupDiEnumDeviceInfo failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @testSetupDiGetClassDevsA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @testSetupDiGetClassDevsA() #0 {
  %1 = alloca %struct.TYPE_9__, align 4
  %2 = alloca %struct.TYPE_11__, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %2, i32 0, i32 0
  store i32 8, i32* %5, align 4
  %6 = call i32 @EnumDisplayDevicesA(i32* null, i32 0, %struct.TYPE_11__* %2, i32 0)
  %7 = call i32 (...) @GetLastError()
  %8 = call i32 @ok(i32 %6, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = call i32 @SetLastError(i32 -559038737)
  %10 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %2, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @SetupDiGetClassDevsA(%struct.TYPE_10__* @testSetupDiGetClassDevsA.displayguid, i32 %11, i32 0, i32 0)
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %15 = icmp ne i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 (...) @GetLastError()
  %18 = call i32 @ok(i32 %16, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i32 %17)
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %1, i32 0, i32 0
  store i32 4, i32* %19, align 4
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @SetupDiEnumDeviceInfo(i64 %20, i32 0, %struct.TYPE_9__* %1)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = call i32 (...) @GetLastError()
  %24 = call i32 @ok(i32 %22, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i32 %23)
  %25 = load i64, i64* %3, align 8
  %26 = call i32 @SetupDiDestroyDeviceInfoList(i64 %25)
  ret void
}

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i32 @EnumDisplayDevicesA(i32*, i32, %struct.TYPE_11__*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i64 @SetupDiGetClassDevsA(%struct.TYPE_10__*, i32, i32, i32) #1

declare dso_local i32 @SetupDiEnumDeviceInfo(i64, i32, %struct.TYPE_9__*) #1

declare dso_local i32 @SetupDiDestroyDeviceInfoList(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
